styles: fix body x footer gap 💄

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,15 +3,15 @@
 @tailwind utilities;
 
 html {
-  @apply scroll-auto overflow-x-hidden h-[100%];
+  @apply scroll-auto overflow-x-hidden h-[100%] bg-black;
 }
 
 body {
-  @apply flex flex-1 flex-col h-[100%];
+  @apply flex flex-1 flex-col h-[100%] bg-black;
 }
 
 footer {
-  @apply footer justify-center items-center  text-neutral-content min-h-16 mb-0 mt-auto z-0 bg-black;
+  @apply footer justify-center items-center  text-neutral-content min-h-16 mb-0 mt-auto z-0;
 }
 
 input.phone-input {
